<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cn.htd.basecenter</groupId>
	<version>1.1.0-RELEASE</version>
	<artifactId>basecenter-parent</artifactId>
	<name>basecenter-parent</name>
	<packaging>pom</packaging>
	<url>http://maven.apache.org</url>
	<properties>
		<htd.version>1.1.0-RELEASE</htd.version>
		<spring.version>4.3.3.RELEASE</spring.version>
		<zkclient.version>0.1</zkclient.version>
		<zookeeper.version>3.4.5</zookeeper.version>
		<commons.dbcp.version>1.3</commons.dbcp.version>
		<mysql.driver.version>5.1.25</mysql.driver.version>
		<junit.version>4.12</junit.version>
		<slf4j.api.version>1.7.2</slf4j.api.version>
		<aspectjweaver.version>1.8.8</aspectjweaver.version>
		<cglib.version>3.2.1</cglib.version>
		<servlet.version>3.1.0</servlet.version>
		<dom4j.version>1.6.1</dom4j.version>
		<commons.lang3.version>3.4</commons.lang3.version>
		<javax.mail.version>1.4.7</javax.mail.version>
		<velocity.version>1.7</velocity.version>
		<velocity-tools.version>2.0</velocity-tools.version>
		<commons.httpclient.version>3.1</commons.httpclient.version>
		<httpclient.version>4.5.1</httpclient.version>
		<esf.version>1.0.0</esf.version>
		<jackson.version>1.9.9</jackson.version>
		<jdk.version>1.7</jdk.version>
		<maven.compiler.plugin.version>3.0</maven.compiler.plugin.version>
		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<description>basecenter</description>

	<dependencyManagement>
		<dependencies>
			<!-- basecenter -->
			<dependency>
				<groupId>cn.htd.basecenter</groupId>
				<artifactId>basecenter-common</artifactId>
				<version>${htd.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.htd.basecenter</groupId>
				<artifactId>basecenter-domain</artifactId>
				<version>${htd.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.htd.basecenter</groupId>
				<artifactId>basecenter-export</artifactId>
				<version>${htd.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.htd.basecenter</groupId>
				<artifactId>basecenter-dao</artifactId>
				<version>${htd.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.htd.basecenter</groupId>
				<artifactId>basecenter-rpc</artifactId>
				<version>${htd.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.htd.basecenter</groupId>
				<artifactId>basecenter-service</artifactId>
				<version>${htd.version}</version>
			</dependency>
			<dependency>
				<groupId>cn.htd.basecenter</groupId>
				<artifactId>basecenter-web</artifactId>
				<version>${htd.version}</version>
			</dependency>
			
			<!-- htd-common -->
			<dependency>
				<groupId>cn.htd.common</groupId>
				<artifactId>common-core</artifactId>
				<version>${htd.version}</version>
			</dependency>

			<!-- spring begin -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context-support</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-orm</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jms</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aop</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-expression</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- spring end -->
	        <!-- logback begin -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.api.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jul-to-slf4j</artifactId>
				<version>${slf4j.api.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<version>1.1.7</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.1.7</version>
			</dependency>
			<!-- zookeeper -->
			<dependency>
				<groupId>com.github.sgroschupf</groupId>
				<artifactId>zkclient</artifactId>
				<version>${zkclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.zookeeper</groupId>
				<artifactId>zookeeper</artifactId>
				<version>${zookeeper.version}</version>
				<exclusions>
	                <exclusion>
	                    <groupId>org.slf4j</groupId>
	                    <artifactId>slf4j-log4j12</artifactId>
	                </exclusion>
	                <exclusion>
	                    <groupId>log4j</groupId>
	                    <artifactId>log4j</artifactId>
	                </exclusion>
	            </exclusions>
			</dependency>
			<!-- dubbo -->
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>dubbo</artifactId>
				<version>2.5.3</version>
				<exclusions>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring</artifactId>
					</exclusion>
					<exclusion>
	                    <groupId>org.slf4j</groupId>
	                    <artifactId>slf4j-log4j12</artifactId>
	                </exclusion>
				</exclusions>
			</dependency>
			
			<!-- mysql -->
			<dependency>
				<groupId>commons-dbcp</groupId>
				<artifactId>commons-dbcp</artifactId>
				<version>${commons.dbcp.version}</version>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql.driver.version}</version>
			</dependency>
			
			<!-- test -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>


			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>${aspectjweaver.version}</version>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib</artifactId>
				<version>${cglib.version}</version>
			</dependency>

			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet.version}</version>
				<scope>provided</scope>
			</dependency>
					
			<dependency>
				<groupId>dom4j</groupId>
				<artifactId>dom4j</artifactId>
				<version>${dom4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons.lang3.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity</artifactId>
				<version>${velocity.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity-tools</artifactId>
				<version>${velocity-tools.version}</version>
			</dependency>
			
			<dependency>
				<groupId>com.sun.mail</groupId>
				<artifactId>javax.mail</artifactId>
				<version>${javax.mail.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-httpclient</groupId>
				<artifactId>commons-httpclient</artifactId>
				<version>${commons.httpclient.version}</version>
			</dependency>

			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-core-asl</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.jackson</groupId>
				<artifactId>jackson-mapper-asl</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<!-- dto validator -->
			<dependency>
			   <groupId>org.hibernate</groupId>
			   <artifactId>hibernate-validator</artifactId>
			   <version>5.3.2.Final</version>
			</dependency>
			<dependency>
			   <groupId>javax.el</groupId>
			   <artifactId>javax.el-api</artifactId>
			   <version>2.2.4</version>
			</dependency>
			<dependency>
			   <groupId>org.glassfish.web</groupId>
			   <artifactId>javax.el</artifactId>
			   <version>2.2.4</version>
			</dependency>
			<!-- rabbitmq -->
			<dependency>
				<groupId>com.rabbitmq</groupId>
				<artifactId>amqp-client</artifactId>
				<version>3.0.4</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.amqp</groupId>
				<artifactId>spring-rabbit</artifactId>
				<version>1.3.9.RELEASE</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>2.2.1</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.2.1</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>2.2.1</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.module</groupId>
				<artifactId>jackson-module-jaxb-annotations</artifactId>
				<version>2.2.1</version>
			</dependency>
			<!-- tbschedule -->
			<dependency>  
				<groupId>com.taobao.pamirs.schedule</groupId>
			    <artifactId>tbschedule</artifactId>
				<version>3.3.3.2</version>
				<exclusions>
	                <exclusion>
	                    <groupId>com.sun.jmx</groupId>
	                    <artifactId>jmxri</artifactId>
	                </exclusion>
	                <exclusion>
	                    <groupId>com.sun.jdmk</groupId>
	                    <artifactId>jmxtools</artifactId>
	                </exclusion>
	                <exclusion>
	                    <groupId>javax.jms</groupId>
	                    <artifactId>jms</artifactId>
	                </exclusion>
	            </exclusions>
			</dependency>
		    <dependency> 
				<groupId>com.google.code.gson</groupId>  
			    <artifactId>gson</artifactId>  
			    <version>2.1</version> 
	        </dependency>
		</dependencies>
	</dependencyManagement>
	<!-- 不同的打包环境 -->
	<profiles>
		<!-- UAT环境 -->
		<profile>
			<id>uat</id>
			<properties>
				<env>uat</env>
			</properties>
		</profile>
		<!-- 生产环境 -->
		<profile>
			<id>prod</id>
			<properties>
				<env>prod</env>
			</properties>
		</profile>
		<!-- 预生产环境 -->
		<profile>
			<id>prep</id>
			<properties>
				<env>prep</env>
			</properties>
		</profile>
		<!-- 测试环境 -->
		<profile>
			<id>test</id>
			<properties>
				<env>test</env>
			</properties>
		</profile>
		<!-- 本地环境 -->
		<profile>
			<id>dev</id>
			<properties>
				<env>dev</env>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
	</profiles>
	<build>
		<filters>
			<filter>../basecenter-parent/src/main/filters/filter-${env}.properties</filter>
		</filters>
		<resources>
			<resource><!-- 不对指定的资源文件进行资源替换 -->
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>**/*.ftl</exclude>
					<exclude>**/*-dynamic.xml</exclude>
					<exclude>**/mybatis/**/*.xml</exclude>
				</excludes>
			</resource>
			<resource><!-- 对ftl文件和动态sql文件进行直接复制 -->
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*.ftl</include>
					<include>**/*-dynamic.xml</include>
					<include>**/mybatis/**/*.xml</include>
				</includes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>**/*.ftl</exclude>
					<exclude>**/*-dynamic.xml</exclude>
					<exclude>**/mybatis/**/*.xml</exclude>
				</excludes>
			</testResource>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*.ftl</include>
					<include>**/*-dynamic.xml</include>
					<include>**/mybatis/**/*.xml</include>
				</includes>
			</testResource>
		</testResources>

		<plugins>
			<!-- 工程编码插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.plugin.version}</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>8.1.0.RC0</version>
				<configuration>
					<scanIntervalSeconds>0</scanIntervalSeconds>
					<webAppConfig>
						<contextPath>/${project.artifactId}</contextPath>
					</webAppConfig>
				</configuration>
			</plugin>
			<!-- 生成javadoc插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<charset>${project.build.sourceEncoding}</charset>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<!-- 打包java源码 -->
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven.source.plugin.version}</version>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- maven-jar-plugin插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<executions>
					<execution>
						<id>my-jar</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<classifier>api</classifier>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<useDefaultManifestFile>true</useDefaultManifestFile>
					<archive>
						<addMavenDescriptor>true</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>
			<!-- 导入eclipse工程插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<wtpversion>2.0</wtpversion>
					<additionalProjectnatures>
						<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
					</additionalProjectnatures>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<argLine>-Xms512m -Xmx2048m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
					<includes>
						<include>cn/htd/**/*Test*.java</include>
					</includes>
					<printSummary>true</printSummary>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<instrumentation>
						<excludes>
							<exclude>cn/htd/**/action/**/*.class</exclude>
							<exclude>cn/htd/**/webapp/**/*.class</exclude>
							<exclude>cn/htd/**/interceptor/**/*.class</exclude>
							<exclude>cn/htd/**/taglib/**/*.class</exclude>
							<exclude>cn/htd/**/domain/**/*.class</exclude>
							<exclude>cn/htd/**/model/**/*.class</exclude>
						</excludes>
					</instrumentation>
					<formats>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>
			<plugin>
                <groupId>org.mybatis.generator</groupId>
                <artifactId>mybatis-generator-maven-plugin</artifactId>
                <version>1.3.2</version>
                 <configuration>
                    <verbose>true</verbose>
                    <overwrite>true</overwrite>
                </configuration>
            </plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Releases</name>
			<url>http://171.16.46.6:8081/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Snapshots</name>
			<url>http://171.16.46.6:8081/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
</project>
